--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,13 @@ h5{
 h6{
 	color: violet;
 }
+
+nav.menu-nav ul li.btn{
+	display: inline-block;
+	list-style-type: none;
+}
+
+nav.menu-nav ul li.btn a{
+	color: white;
+	background-color: red;
+	text-decoration: none;
